apply plugin: 'java'
apply plugin: 'application'

mainClassName = 'com.oocode.Main'

version = '1.0.0'

description = """WaveDays"""

sourceCompatibility = 21
targetCompatibility = 21

tasks.withType(JavaCompile) {
	options.encoding = 'UTF-8'
}

repositories {
     mavenCentral()
}

dependencies {
    implementation 'com.opencsv:opencsv:5.9'
    implementation 'com.squareup.okhttp3:okhttp:4.3.1'
    implementation 'io.fusionauth:java-http:0.2.10'

    testImplementation 'junit:junit:4.13.2'
    testImplementation(platform('org.junit:junit-bom:5.10.1'))
    testImplementation('org.junit.jupiter:junit-jupiter')
    testImplementation 'org.hamcrest:hamcrest-all:1.3'
    testImplementation 'com.oneeyedmen:okeydoke:1.3.3'
}

test {
    useJUnitPlatform()
    testLogging {
        events "passed", "skipped", "failed"
    }
}
